# hospital-management-system

./: .env  Env.py  README.md  deploy.sh  pyproject.toml  requirements.txt
core/: models.py  urls.py
core/migrations/: 0001_initial.py
core/static/core/styles/: style.css
core/templates/: home.html  index.html  layout.html
hospital_management_system/: schema.py  settings.py  urls.py
