[tool.poetry]
name = "hospital management system"
version = "0.1.0"
description = ""
authors = ["Rahmaao <rahma.olaniyan@aun.edu.ng>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
envguardian = "^1.1.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
graphene = "^3.3"
graphene-django = "^3.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
